Prototyping of editor and results listing

--- a/html-prototyping/listing.html
+++ b/html-prototyping/listing.html
@@ -2,8 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CESIL RUN LISTING PROTOTYPE</title>
+    <title>CESIL</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        .navbar {
+            margin-bottom: 20px;
+        }
+        #listing { font-family: Monospace; font-size: 20px}
+        .table-striped>tbody>tr:nth-child(odd)>td,
+        .table-striped>tbody>tr:nth-child(odd)>th {
+           background-color: #ccffcc;
+         }
+    </style>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">CESIL</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Editor</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Docs</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<main class="container">
+
+    <table class="table table-striped" id="listing">
+        <tr>
+            <td>( PROGRAM</td>
+        </tr>
+        <tr>
+            <td>      PRINT  "HELLO WORLD"</td>
+        </tr>
+        <tr>
+            <td>      HALT</td>
+        </tr>
+        <tr>
+            <td>%</td>
+        </tr>
+        <tr>
+            <td>*</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>RESULTS:</td>
+        </tr>
+        <tr>
+            <td>HELLO WORLD</td>
+        </tr>
+
+    </table>
+
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
