--- a/html-prototyping/listing.html
+++ b/html-prototyping/listing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CESIL</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .navbar {
             margin-bottom: 20px;
@@ -38,7 +38,7 @@
 
 <main class="container">
 
-    <table class="table table-striped" id="listing">
+    <table class="table table-striped" id="table-results">
         <tr>
             <td>( PROGRAM</td>
         </tr>
@@ -68,6 +68,6 @@
 
 </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="static/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
