--- a/html-prototyping/editor.html
+++ b/html-prototyping/editor.html
@@ -8,7 +8,7 @@
         .navbar {
             margin-bottom: 20px;
         }
-        #editor { font-family: Monospace; font-size: 20px}
+        #editor { font-family: Courier New; font-weight: bold; font-size: 1.2em}
     </style>
 </head>
 <body>
