--- a/html-prototyping/listing.html
+++ b/html-prototyping/listing.html
@@ -8,7 +8,7 @@
         .navbar {
             margin-bottom: 20px;
         }
-        #listing { font-family: Monospace; font-size: 20px}
+        #table-results { font-family: Courier New; font-weight: bold; font-size: 1.2em; white-space: pre; }
         .table-striped>tbody>tr:nth-child(odd)>td,
         .table-striped>tbody>tr:nth-child(odd)>th {
            background-color: #ccffcc;
