--- a/html-prototyping/docs.html
+++ b/html-prototyping/docs.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container-fluid">
         <span class="navbar-brand">CESIL (Computer Education In Schools Instruction Language)</span>
         <ul class="navbar-nav">
@@ -27,7 +27,7 @@
         </ul>
     </div>
 </nav>
-<main class="container">
+<main class="container" style="padding-top: 80px;">
     <h4>Program structure</h4>
     <p>
         A CESIL program is split into two parts, instructions and data.
