--- a/html-prototyping/emulator.html
+++ b/html-prototyping/emulator.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container-fluid">
         <span class="navbar-brand">CESIL (Computer Education In Schools Instruction Language)</span>
         <ul class="navbar-nav">
@@ -38,7 +38,7 @@
         </ul>
     </div>
 </nav>
-<main class="container">
+<main class="container" style="padding-top: 80px;">
 
     <div class="parent-container d-flex">
         <div class="container">
