--- a/cesil-web/html-prototyping/docs.html
+++ b/cesil-web/html-prototyping/docs.html
@@ -19,7 +19,7 @@
         <span class="navbar-brand">CESIL (Computer Education In Schools Instruction Language)</span>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/" id="menu-item-emulator">Emulator</a>
+                <a class="nav-link" href="/" id="menu-item-interpreter">Interpreter</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="#">Docs</a>
