--- a/cesil-web/html-prototyping/interpreter.html
+++ b/cesil-web/html-prototyping/interpreter.html
@@ -30,7 +30,7 @@
         <span class="navbar-brand">CESIL (Computer Education In Schools Instruction Language)</span>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="/" id="menu-item-emulator">Emulator</a>
+                <a class="nav-link active" href="/" id="menu-item-interpreter">Interpreter</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/docs">Docs</a>
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col border border-secondary rounded">
                     <h6>Source code</h6>
-                    <form action="/emulator-run" method="post" name="program">
+                    <form action="/interpreter-run" method="post" name="program">
                         <div class="mb-3">
                             <textarea class="form-control editor" rows="20" name="sourcecode"></textarea>
                         </div>
